# kinematic_analysis

./: .gitignore  .gitmodules  README.md
src/kinematic_analysis/: CMakeLists.txt  package.xml
src/kinematic_analysis/include/kinematic_analysis/: forward_kinematics.h  inverse_kinematics.h  moveit_planner.h
src/kinematic_analysis/src/: forward_kinematics.cpp  inverse_kinematics.cpp  moveit_planner.cpp
src/kuka_kr6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/kuka_kr6_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  kuka_kr6r900sixx.srdf  ompl_planning.yaml  ros_controllers.yaml
src/kuka_kr6_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  kuka_kr6r900sixx_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
