<?xml version="1.0"?>
<package format="2">
  <name>kinematic_analysis</name>
  <version>0.0.0</version>
  <description>The kinematic_analysis package</description>

  <maintainer email="aytac@bilims.com">Aytac Kahveci</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
